--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "postinstall": "chmod +x node_modules/.bin/prisma && prisma generate"
+    "postinstall": "prisma generate"
   },
   "author": "",
   "license": "ISC",
