--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 PORT = 3000
 # DATABASE_URL = "mongodb+srv://emcaabolcsl:oPnU7s3a6b6LqRDr@cluster0.glygo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DATABASE_URL="mongodb://localhost:27017/propertyx"
+# DATABASE_URL="mongodb://localhost:27017/propertyx?retryWrites=true&w=majority"
+
+DATABASE_URL="mongodb+srv://smileysmile559:OHNOzLPplzxnuDZt@cluster0.dxollv3.mongodb.net/propertyxchange?retryWrites=true&w=majority&appName=Cluster0"
 AUTH0_AUDIENCE=https://your-api-identifier/
 AUTH0_ISSUER_BASE_URL=https://your-auth0-domain/
