--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,13 @@
-PORT = 3000
-# DATABASE_URL = "mongodb+srv://emcaabolcsl:oPnU7s3a6b6LqRDr@cluster0.glygo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 # DATABASE_URL="mongodb://localhost:27017/propertyx?retryWrites=true&w=majority"
-
 DATABASE_URL="mongodb+srv://smileysmile559:OHNOzLPplzxnuDZt@cluster0.dxollv3.mongodb.net/propertyxchange?retryWrites=true&w=majority&appName=Cluster0"
-AUTH0_AUDIENCE=https://your-api-identifier/
-AUTH0_ISSUER_BASE_URL=https://your-auth0-domain/
+
+FRONTEND_URL="https://propertyxchange.vercel.app"
+BACKEND_URL="https://propertyxchange-api-ten.vercel.app"
+
+# FRONTEND_URL="http://localhost:5173"
+# BACKEND_URL="http://localhost:3000"
+
+AUTH0_ISSUER_BASE_URL="https://dev-7f1xt3q761kj5klp.us.auth0.com/"
+JWK_URI="https://dev-7f1xt3q761kj5klp.us.auth0.com/.well-known/jwks.json"
+
+PORT = 3000
